Alignment Fixes

--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -30,6 +30,8 @@
     }
     .menu-side {
       padding: 0 50px;
+      flex: 1;
+      justify-content: center;
       .menu-itm {
         cursor: pointer;
         text-decoration: none !important;
@@ -63,32 +65,31 @@
     }
     .rate-list-wrapper {
       margin-top: auto;
-      max-height: 485px;
+      max-height: calc(45vh - 75px + ((45vh - 75px) / 3));
       .rates-list {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         overflow-y: auto;
         .coin {
-          height: 121px;
-          min-height: 121px;
+          height: calc((45vh - 75px) / 3);
+          min-height: calc((45vh - 75px) / 3);
           display: flex;
           padding: 35px 50px;
           border-top: 0.5px solid #e7e7e7;
           .coin-logo {
             margin: auto;
             margin-left: 0;
-            height: 22px;
+            height: 23px;
           }
           .rate {
             margin: auto;
             margin-right: 0;
             text-align: center;
-            font-size: 21px;
+            font-size: 20px;
             small {
               font-size: 12px;
               color: #3ea154;
@@ -102,6 +103,7 @@
       }
     }
     .logout {
+      height: 75px;
       border-top: 0.5px solid #e7e7e7;
       padding: 25px 15px;
       h5 {
