--- a/src/static/scss/transaction.scss
+++ b/src/static/scss/transaction.scss
@@ -27,7 +27,7 @@
         height: 60px;
         width: 60px;
         border-radius: 6px;
-        border: 1px solid $primary-color;
+        border: 1px solid $vault-border-color;
         margin-left: 15px;
         display: flex;
         justify-content: center;
@@ -53,11 +53,12 @@
     .search {
       padding: 0 20px;
       display: flex;
-      border: 1px solid $primary-color;
+      border: 1px solid $vault-border-color;
       color: $primary-color;
       border-radius: 6px;
       justify-content: center;
       align-items: center;
+      // font-size: 12px;
     }
     .search {
       input {
@@ -72,6 +73,7 @@
     margin-top: 30px;
     .transactions {
       .day {
+        margin-top: 1rem;
         font-size: 16px;
         line-height: 1;
         padding: 6px 0;
